k8s/flux/platform/cert-manager/NetworkPolicies.yaml
# Netzwerkregeln
---
# Offen nur der Webhook, den der kube-apiserver anruft.
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: cert-manager
  ingress:
    - fromEntities:
        - kube-apiserver
        - host
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP

---
# Ausgehend nur die API
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-egress
  namespace: cert-manager
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
